# firebase-wasm-rs

./: Cargo.toml  README.md
src/: auth.rs  firestore.rs  functions.rs  lib.rs  storage.rs  types.rs  utils.rs
src/auth/: bindings.rs  user.rs
src/firestore/: bindings.rs
src/storage/: bindings.rs
