[package]
name = "firebase-wasm"
version = "0.8.1"
edition = "2021"
authors = ["Jose Quesada <jquesada2016@fau.edu>"]
license = "MIT"
description = "Rust bindings for the Firebase v9 JS SDK."
homepage = "https://github.com/jquesada2016/firebase-wasm-rs"
repository = "https://github.com/jquesada2016/firebase-wasm-rs"
documentation = "https://docs.rs/firebase-wasm"
categories = ["api-bindings", "wasm", "web-programming"]
keywords = ["firebase", "wasm", "bindings", "js"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []

[dependencies]
clone-macro = "0.1"
derive_more = "0.99"
futures = "0.3"
gloo = "0.9"
js-sys = "0.3"
serde = "1.0"
serde-wasm-bindgen = "0.5"
serde_with = "3"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
typed-builder = "0.15"
wasm-bindgen = "0.2"
wasm-bindgen-struct = { git = "https://github.com/jquesada2016/wasm-bindgen-struct" }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob"] }
